--- a/Python/IonPaperPlot.ipynb
+++ b/Python/IonPaperPlot.ipynb
@@ -929,6 +929,127 @@
    "source": [
     "fig = plt.figure(tight_layout=True,figsize=(cm2inch(8*2),cm2inch(6.5*2)))\n",
     "intDir=\"D:\\\\doc\\\\data\\\\onepump\\\\onepump200\\\\\"\n",
+    "subdir='D:\\\\doc\\\\data\\\\ion1test\\\\tpp\\\\data\\\\'\n",
+    "\n",
+    "\n",
+    "ax=plt.axes([0.10,0.55,0.35,0.35])\n",
+    "setlabelm(ax,'(a)',[-0.2,1.1])\n",
+    "data=np.loadtxt(intDir+\"excradwave.dat\")\n",
+    "np.savetxt(dir+\"data\\\\f9(1).dat\",data,fmt=\"%.9f\")\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z=data[:,2]\n",
+    "plt.xlabel(\"Time (fs)\")\n",
+    "plt.ylabel(\"$R$ (a.u.)\")\n",
+    "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "# im=ax.tricontourf(x,y,z,levels,cmap='jet')#,vmin=0.0,vmax=2.0)1\n",
+    "# cb=plt.colorbar(im,location='top',fraction=0.15,shrink=0.66,aspect=10,format=\"%.3f\")\n",
+    "plt.colorbar(format=cbformat)\n",
+    "tick_locator=ticker.MaxNLocator(nbins=5)\n",
+    "cb.locator = tick_locator\n",
+    "cb.update_ticks()\n",
+    "# plt.xlim(0,150)\n",
+    "plt.ylim(min(y),10)\n",
+    "#FC \n",
+    "ax=plt.axes([0.55,0.55,0.35,0.35])\n",
+    "setlabelm(ax,'(b)',[-0.2,1.1])\n",
+    "data=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\fc3\\\\FCrad.dat')\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z=data[:,2]\n",
+    "plt.ylim(min(y),10.0)\n",
+    "im=plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "\n",
+    "# cb=plt.colorbar(im,location='top',fraction=0.15,shrink=0.66,aspect=10,format=cbformat)\n",
+    "plt.colorbar(format=cbformat)\n",
+    "tick_locator=ticker.MaxNLocator(nbins=5)\n",
+    "cb.locator = tick_locator\n",
+    "cb.update_ticks()\n",
+    "plt.xlabel('Time (fs)')\n",
+    "plt.ylabel('$R$ (a.u.)')\n",
+    "\n",
+    "\n",
+    "ax=plt.axes([0.1,0.1,0.35,0.35])\n",
+    "setlabelm(ax,'(c)',[-0.2,1.1])\n",
+    "data =np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\onepump2\\\\Excangwave.dat')\n",
+    "#plt.style.use('_mpl-gallery-nogrid')\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]/180\n",
+    "z=data[:,2]\n",
+    "# plt.xlim(TimeTurn+1,TimeEnd)\n",
+    "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "# im=ax.tricontourf(x,y,z,levels,cmap='jet')#,vmin=0.0,vmax=2.0)\n",
+    "# cb=plt.colorbar(im,location='top',fraction=0.15,shrink=0.66,aspect=10,format=cbformat)\n",
+    "plt.colorbar(format=cbformat)\n",
+    "tick_locator=ticker.MaxNLocator(nbins=5)\n",
+    "cb.locator = tick_locator\n",
+    "cb.update_ticks()\n",
+    "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
+    "plt.ylabel(\"$\\\\theta$ ($\\\\pi$)\")\n",
+    "\n",
+    "ax=plt.axes([0.55,0.10,0.28,0.35])\n",
+    "setlabelm(ax,'(d)',[-0.2,1.1])\n",
+    "data=np.loadtxt(\"D:\\\\doc\\\\data\\\\onepump\\\\onePump5\\\\ori_ali_2.dat\")\n",
+    "datapop=np.loadtxt(\"D:\\\\doc\\\\data\\\\onepump\\\\onePump5\\\\PopulationOfState.dat\")\n",
+    "\n",
+    "yp=datapop[:,2]\n",
+    "x=data[:,0]\n",
+    "l=int(len(x)/200*25)\n",
+    "y1=data[:,1]\n",
+    "y2=data[:,2]\n",
+    "x2=x[l:]\n",
+    "y22=data[l:,2]/datapop[l:,2]\n",
+    "ax=plt.gca()\n",
+    "plt.plot(x,y2,'k-',x2,y22,'r--')\n",
+    "plt.legend([\"$\\\\langle \\\\psi_{\\\\rm{exc}}| \\\\rm{cos}^2 \\\\it{\\\\theta}|\\\\psi_{\\\\rm{exc}} \\\\rangle $\",\"$\\\\langle \\\\psi_{\\\\rm{exc}}| \\\\rm{cos}^2 \\\\it{\\\\theta}|\\\\psi_{\\\\rm{exc}} \\\\rangle\\\\cdot \\\\frac{1}{P_{exc}}}$\"],\n",
+    "           fontsize=7,loc=[0.25,0.1])\n",
+    "import matplotlib.ticker as mtick\n",
+    "ax.yaxis.set_major_formatter(mtick.FormatStrFormatter(\"%.2f\"))\n",
+    "plt.ylabel('$\\\\langle {\\\\rm cos^2} \\\\theta \\\\rangle$')\n",
+    "plt.xlabel('Time ('+timeUnit+')')\n",
+    "\n",
+    "\n",
+    "plt.subplots_adjust(left=0.125,\n",
+    "                    bottom=0.1, \n",
+    "                    right=0.9, \n",
+    "                    top=0.9, \n",
+    "                    wspace=0.3, \n",
+    "                    hspace=0.35)\n",
+    "plt.savefig(dir+'picture\\\\f9ExcRadWave.'+figureType,bbox_inches = 'tight',dpi=figureDPI)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(cm2inch(8*2),cm2inch(6.5)))\n",
+    "plt.subplot(1,2,1)\n",
+    "data=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\fc3\\\\FCang.dat')\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z=data[:,2]\n",
+    "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "plt.colorbar(format=cbformat)\n",
+    "plt.subplot(1,2,2)\n",
+    "data=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\fc3\\\\FCrad.dat')\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z=data[:,2]\n",
+    "plt.ylim(min(y),10.0)\n",
+    "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "plt.colorbar(format=cbformat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plt.figure(tight_layout=True,figsize=(cm2inch(8*2),cm2inch(6.5*2)))\n",
+    "intDir=\"D:\\\\doc\\\\data\\\\onepump\\\\onepump200\\\\\"\n",
     "\n",
     "ax=plt.axes([0.10,0.55,0.35,0.35])\n",
     "data=np.loadtxt(intDir+\"excradwave.dat\")\n",
@@ -1113,19 +1234,19 @@
     "data=np.loadtxt(subdir+'FCRItppEq40.txt')\n",
     "x=data[:,0]\n",
     "y=data[:,1]\n",
-    "plt.plot(x,y)\n",
+    "plt.plot(x,y,'k-')\n",
     "data=np.loadtxt(subdir+'FCRItppEq60.txt')\n",
     "x=data[:,0]\n",
     "y=data[:,1]\n",
-    "plt.plot(x,y)\n",
+    "plt.plot(x,y,'r--')\n",
     "data=np.loadtxt(subdir+'FCRItppEq80.txt')\n",
     "x=data[:,0]\n",
     "y=data[:,1]\n",
-    "plt.plot(x,y)\n",
+    "plt.plot(x,y,'b-.')\n",
     "data=np.loadtxt(subdir+'FCRItppEq100.txt')\n",
     "x=data[:,0]\n",
     "y=data[:,1]\n",
-    "plt.plot(x,y)\n",
+    "plt.plot(x,y,'g--')\n",
     "plt.xlabel(\"$R$ (a.u.)\")\n",
     "plt.ylabel(\"Intensity (arb.units)\")\n",
     "plt.xlim(min(x),10.0)\n",
@@ -1531,13 +1652,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# fig = plt.figure(tight_layout=True,figsize=(cm2inch(16),cm2inch(12)))\n",
     "# data1=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\All\\\\GroAngWave.dat')\n",
@@ -1733,7 +1847,8 @@
     "figdir=subdir+\"figures\\\\\"\n",
     "mkdir(figdir)\n",
     "for i in range(20,201,5):\n",
-    "    del fcr\n",
+    "    # del fcr\n",
+    "    \n",
     "    data=np.loadtxt(subdir+str(i)+\"\\\\qua_int_rad.dat\")\n",
     "    x=data[:,0]\n",
     "    y=data[:,1]\n",
@@ -1851,7 +1966,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0 (tags/v3.9.0:9cf6752, Oct  5 2020, 15:34:40) [MSC v.1927 64 bit (AMD64)]"
+   "version": "3.9.0"
   },
   "orig_nbformat": 4,
   "vscode": {
