--- a/Python/OriPaperPlot.ipynb
+++ b/Python/OriPaperPlot.ipynb
@@ -11,50 +11,76 @@
     "import matplotlib as mpl\n",
     "from matplotlib.ticker import MultipleLocator\n",
     "import os\n",
+    "from matplotlib import ticker\n",
     "plt.rcParams['ytick.right']  =plt.rcParams['xtick.top'] =True\n",
     "xminorLocator=MultipleLocator(2)\n",
     "#plt.rcParams['set_minor_locator']=xminorLocator\n",
-    "plt.rcParams.update({\n",
-    "    \"text.usetex\": True,\n",
-    "    \"font.family\": \"sans-serif\",\n",
-    "    \"font.sans-serif\": [\"Time New Rroman\"]})\n",
-    "# for Palatino and other serif fonts use:\n",
-    "plt.rcParams.update({\n",
-    "    \"text.usetex\": True,\n",
-    "    \"font.family\": \"serif\",\n",
-    "    #\"font.serif\": [\"Palatino\"],\n",
-    "    \"font.serif\": [\"Time New Roman\"], \n",
-    "})\n",
-    "# It's also possible to use the reduced notation by directly setting font.family:\n",
-    "plt.rcParams.update({\n",
-    "  \"text.usetex\": True,\n",
-    "  \"font.family\": \"Time New Roman\",\n",
-    "  \"font.size\": 8,\n",
-    "})\n",
+    "# plt.rcParams.update({\n",
+    "#     \"text.usetex\": True,\n",
+    "#     \"font.family\": \"sans-serif\",\n",
+    "#     \"font.sans-serif\": [\"Time New Rroman\"]})\n",
+    "# # for Palatino and other serif fonts use:\n",
+    "# plt.rcParams.update({\n",
+    "#     \"text.usetex\": True,\n",
+    "#     \"font.family\": \"serif\",\n",
+    "#     #\"font.serif\": [\"Palatino\"],\n",
+    "#     \"font.serif\": [\"Time New Roman\"], \n",
+    "# })\n",
+    "# # It's also possible to use the reduced notation by directly setting font.family:\n",
+    "# plt.rcParams.update({\n",
+    "#   \"text.usetex\": True,\n",
+    "#   \"font.family\": \"Time New Roman\",\n",
+    "#   \"font.size\": 8,\n",
+    "# })\n",
     "\n",
-    "def cm_to_inch(value):\n",
+    "def cm2inch(value):\n",
     "    return value/2.54\n",
     "\n",
-    "plt.rcParams['figure.figsize'] = (cm_to_inch(8), cm_to_inch(6.5))\n",
+    "plt.rcParams['figure.figsize'] = (cm2inch(8), cm2inch(6.5))\n",
     "#plt.rcParams['figure.figsize'] =(4,3)#(3.5,2.5)\n",
     "plt.rcParams['lines.linewidth'] = 1\n",
     "plt.rcParams['xtick.direction'] = 'in'\n",
     "plt.rcParams['ytick.direction'] = 'in'\n",
+    "plt.rcParams['xtick.labelsize'] = 6\n",
+    "plt.rcParams['ytick.labelsize'] = 6\n",
+    "plt.rcParams['legend.fontsize'] =6\n",
+    "\n",
+    "from matplotlib import rcParams\n",
+    "config = {\n",
+    "    \"text.usetex\": False,\n",
+    "    \"font.family\":'serif',\n",
+    "    # \"font.family\":'stix',\n",
+    "    \"font.size\": 8,\n",
+    "    \"mathtext.fontset\":'stix',\n",
+    "    # \"font.serif\": ['SimSun'],\n",
+    "}\n",
+    "rcParams.update(config)\n",
+    "\n",
+    "\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
-    "import numpy\n",
+    "import numpy \n",
     "def setlabel(ax, label, loc=2, borderpad=0.6, **kwargs):\n",
     "    legend = ax.get_legend()\n",
     "    if legend:\n",
     "        ax.add_artist(legend)\n",
-    "    line, = ax.plot(numpy.NaN,numpy.NaN,color='none',label=label)\n",
+    "    line, = ax.plot(numpy.NaN,numpy.NaN,color='none',label=label,fillstyle='full')\n",
+    "    # legend_font = {\n",
+    "    # 'family': 'Times New Roman',\n",
+    "    # 'style':'normal',\n",
+    "    # 'size':10,\n",
+    "    # 'weight': \"bold\",\n",
+    "    # }\n",
     "    label_legend = ax.legend(handles=[line],\n",
-    "                             loc=[-0.15,1.001],\n",
-    "                             handlelength=0,\n",
-    "                             handleheight=0,\n",
-    "                             handletextpad=0,\n",
-    "                             borderaxespad=0,\n",
+    "                             loc=[-0.2,1.0005],\n",
+    "                             handlelength=0.0,\n",
+    "                             handleheight=0.0,\n",
+    "                             handletextpad=0.0,\n",
+    "                             borderaxespad=0.0,\n",
     "                             borderpad=borderpad,\n",
     "                             frameon=False,\n",
+    "                             shadow=True,\n",
+    "                             facecolor='gray',\n",
+    "                             prop={'weight':'bold','size':8},\n",
     "                             **kwargs)\n",
     "    label_legend.remove()\n",
     "    ax.add_artist(label_legend)\n",
@@ -72,15 +98,57 @@
     "                             borderaxespad=0,\n",
     "                             borderpad=borderpad,\n",
     "                             frameon=False,\n",
+    "                             shadow=True,\n",
+    "                             facecolor='gray',\n",
+    "                             prop={'weight':'bold','size':8},\n",
     "                             **kwargs)\n",
     "    label_legend.remove()\n",
     "    ax.add_artist(label_legend)\n",
     "    line.remove()\n",
-    "# f=open(dir+\"alog.dat\",encoding=\"utf-8\")\n",
-    "# print(f.read(1500))\n",
+    "def sciforyax(ax):\n",
+    "    formatter=ticker.ScalarFormatter(useMathText=True)\n",
+    "    formatter.set_scientific(True)\n",
+    "    formatter.set_powerlimits((0,0))\n",
+    "    ax.yaxis.set_major_formatter(formatter)\n",
+    "def sciforxax(ax):\n",
+    "    formatter=ticker.ScalarFormatter(useMathText=True)\n",
+    "    formatter.set_scientific(True)\n",
+    "    formatter.set_powerlimits((0,0))\n",
+    "    ax.xaxis.set_major_formatter(formatter)\n",
+    "cbformat=ticker.ScalarFormatter(useMathText=True,useOffset=True)\n",
+    "cbformat.set_powerlimits((-0,0))\n",
+    "cbformat.format=\"%.2f\"\n",
+    "\n",
+    "import matplotlib.ticker\n",
+    "class OOMFormatter(matplotlib.ticker.ScalarFormatter):\n",
+    "    def __init__(self, order=0, fformat=\"%.3f\", offset=True, mathText=True):\n",
+    "        self.oom = order\n",
+    "        self.fformat = fformat\n",
+    "        matplotlib.ticker.ScalarFormatter.__init__(self,useOffset=offset,useMathText=mathText)\n",
+    "    def _set_order_of_magnitude(self):\n",
+    "        self.orderOfMagnitude = self.oom\n",
+    "    def _set_format(self, vmin=None, vmax=None):\n",
+    "        self.format = self.fformat\n",
+    "        if self._useMathText:\n",
+    "             self.format = r'$\\mathdefault{%s}$' % self.format\n",
+    "def fee(d):\n",
+    "    import os\n",
+    "    if (os.path.exists(d)):\n",
+    "        print(\"The file exists. \")\n",
+    "        sz= os.path.getsize(d)\n",
+    "        if not sz:\n",
+    "            print(d,\" is empty!\")\n",
+    "        else: \n",
+    "            print(\"Size of \",d,\" is \", sz )\n",
+    "            return True\n",
+    "    else:\n",
+    "        print(d, \" is not exists! \")\n",
+    "        return  False \n",
+    "        \n",
+    "\n",
     "levels=100\n",
     "figureDPI=1200\n",
-    "figureType=\"jpg\"\n",
+    "figureType=\"jpeg\"\n",
     "timeUnit=\"fs\""
    ]
   },
@@ -113,6 +181,7 @@
     "plt.ylabel('$E(t)$ (V/m)')\n",
     "plt.xlim(-1500,7500)\n",
     "setlabel(ax1,'(a)')\n",
+    "sciforyax(ax1)\n",
     "ax2=plt.subplot(2,1,2)\n",
     "data=np.loadtxt('F:\\\\doc\\\\ori1\\\\oneHCP\\\\temprature\\\\0\\\\p_veq0.dat')\n",
     "\n",
@@ -127,7 +196,7 @@
     "plt.plot(x,y1,x,y2,x,y3,x,y4,x,y5,x,y6)\n",
     "# plt.text(-0.1,1,\"(b)\")\n",
     "setlabel(ax2, '(b)')\n",
-    "plt.legend(['$|0,0\\\\rangle$','$|0,1\\\\rangle$','$|0,2\\\\rangle$','$|0,3\\\\rangle$','$|0,4\\\\rangle$','$|0,5\\\\rangle$','$|0,6\\\\rangle$'],loc=(0.6,0.7),ncol=2)\n",
+    "plt.legend(['$|0,0\\\\rangle$','$|0,1\\\\rangle$','$|0,2\\\\rangle$','$|0,3\\\\rangle$','$|0,4\\\\rangle$','$|0,5\\\\rangle$','$|0,6\\\\rangle$'],loc=(0.5,0.7),ncol=2)\n",
     "plt.xlim(-1500,7500)\n",
     "plt.xlabel('Time (fs)')\n",
     "plt.ylabel('Population')\n",
@@ -376,6 +445,91 @@
     "plt.savefig(dir+\"f12TmpTimOri.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from matplotlib.ticker import MaxNLocator\n",
+    "plt.figure(figsize=((16/2.54),(13/2.54)))\n",
+    "ax1=plt.subplot(1,2,1)\n",
+    "setlabel(ax1,\"(a)\")\n",
+    "DataPop =np.loadtxt('D:\\\\doc\\\\data\\\\ori\\\\tvj1\\\\p_vj\\\\p_vj_at_neg002000_fs.dat')\n",
+    "#plt.style.use('_mpl-gallery-nogrid')\n",
+    "x=DataPop[:,0]\n",
+    "y=DataPop[:,1]\n",
+    "z=DataPop[:,2]\n",
+    "ny=int((max(y)-min(y))/(y[2]-y[1]))+1\n",
+    "nx=int((max(x)-min(x))/(x[ny]-x[0]))+1\n",
+    "zMesh=np.zeros((ny,nx))\n",
+    "for i in range(1,nx):\n",
+    "    for j in range(1,ny):\n",
+    "        zMesh[j-1,i-1]=z[(i-1)*ny+j-1]\n",
+    "# print('nx= ',nx,' ny= ',ny)\n",
+    "# print('xMax= ',max(x),' xMin= ',min(x),' yMax= ',max(y),' yMin= ',min(y))\n",
+    "# print('x[50]',x[50])\n",
+    "# print(x[0])\n",
+    "# print(zMesh)\n",
+    "xMesh=np.linspace(min(x),max(x),nx)\n",
+    "yMesh=np.linspace(min(y),max(y),ny)\n",
+    "#xx,yy,zz=np.meshgrid(xMesh,yMesh,zMesh)\n",
+    "plt.pcolormesh(xMesh,yMesh,zMesh,cmap='jet')\n",
+    "ax1.xaxis.set_major_locator(MaxNLocator(integer=True))\n",
+    "ax1.yaxis.set_major_locator(MaxNLocator(integer=True))\n",
+    "plt.xlim(-0.5,5.5)\n",
+    "plt.ylim(-0.5,10.5)\n",
+    "plt.xlabel('$V$')\n",
+    "plt.ylabel('$J$')\n",
+    "plt.title(\"Initial population\")\n",
+    "plt.colorbar(format=cbformat)\n",
+    "ax2=plt.subplot(1,2,2)\n",
+    "setlabel(ax2,\"(b)\")\n",
+    "DataPop =np.loadtxt('D:\\\\doc\\\\data\\\\ori\\\\tvj1\\\\p_vj\\\\p_vj_at_pos007500_fs.dat')\n",
+    "#plt.style.use('_mpl-gallery-nogrid')\n",
+    "x=DataPop[:,0]\n",
+    "y=DataPop[:,1]\n",
+    "z=DataPop[:,2]\n",
+    "ny=int((max(y)-min(y))/(y[2]-y[1]))+1\n",
+    "nx=int((max(x)-min(x))/(x[ny]-x[0]))+1\n",
+    "zMesh=np.zeros((ny,nx))\n",
+    "for i in range(1,nx):\n",
+    "    for j in range(1,ny):\n",
+    "        zMesh[j-1,i-1]=z[(i-1)*ny+j-1]\n",
+    "# print('nx= ',nx,' ny= ',ny)\n",
+    "# print('xMax= ',max(x),' xMin= ',min(x),' yMax= ',max(y),' yMin= ',min(y))\n",
+    "# print('x[50]',x[50])\n",
+    "# print(x[0])\n",
+    "# print(zMesh)\n",
+    "xMesh=np.linspace(min(x),max(x),nx)\n",
+    "yMesh=np.linspace(min(y),max(y),ny)\n",
+    "#xx,yy,zz=np.meshgrid(xMesh,yMesh,zMesh)\n",
+    "plt.pcolormesh(xMesh,yMesh,zMesh,cmap='jet')\n",
+    "ax2.xaxis.set_major_locator(MaxNLocator(integer=True))\n",
+    "ax2.yaxis.set_major_locator(MaxNLocator(integer=True))\n",
+    "plt.title(\"Final population\")\n",
+    "plt.xlabel('$V$')\n",
+    "plt.ylabel('$J$')\n",
+    "plt.xlim(-0.5,5.5)\n",
+    "plt.ylim(-0.5,10.5)\n",
+    "plt.colorbar(format=cbformat)\n",
+    "plt.subplots_adjust(left=0.125,\n",
+    "                    bottom=0.1, \n",
+    "                    right=0.9, \n",
+    "                    top=0.9, \n",
+    "                    wspace=0.25, \n",
+    "                    hspace=0.2)\n",
+    "plt.savefig(dir+\"p_vj.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
+    "os.startfile(dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
