--- a/Python/oriplot.ipynb
+++ b/Python/oriplot.ipynb
@@ -122,9 +122,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "datanew=np.loadtxt('C:\\\\Users\\\\DELL\\\\OneDrive - mail.dlut.edu.cn\\\\program\\\\origin program for orientation\\originoforient\\\\LiHGroundState.txt')\n",
+    "dataold=np.loadtxt('C:\\\\Users\\\\DELL\\\\OneDrive - mail.dlut.edu.cn\\\\program\\\\origin program for orientation\\originoforient\\\\pesco.txt')\n",
+    "x1=datanew[:,0]\n",
+    "y1=datanew[:,1]\n",
+    "x2=dataold[:,0]\n",
+    "y2=dataold[:,1]\n",
+    "plt.plot(x1,y1,x2,y2)\n",
+    "plt.xlim(min(x1),10.0)\n",
+    "plt.ylim(min(y1),-7.9)\n",
+    "plt.savefig('D:\\\\LiHGroundState.jpeg',dpi=1200)\n",
+    "os.startfile('D:\\\\LiHGroundState.jpeg')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# dir='D:\\\\doc\\\\data\\\\ori\\\\test2\\\\'\n",
     "dir='D:\\\\dataofpro\\\\'\n",
-    "# dir=\"F:\\\\doc\\\\ori1\\\\oneHCP\\\\wave\\\\ori1\\\\\"\n",
+    "dir=\"F:\\\\doc\\\\ori1\\\\oneHCP\\\\wave\\\\ori1\\\\\"\n",
+    "dir='F:\\\\doc\\\\ori1\\\\twoHCP\\\\two_oppsite_HCP\\\\225\\\\'\n",
     "print('Working directory',dir)\n",
     "print(\"\\n\")\n",
     "f=open(dir+\"alog.dat\",encoding=\"utf-8\")\n",
@@ -254,7 +275,7 @@
     "#plt.legend([\"First\", \"Second\"],loc=(0.75,0.7))\n",
     "plt.savefig(dir+\"LaserFiled.jpeg\",bbox_inches = 'tight',transparent=True,dpi=600)\n",
     "plt.show()\n",
-    "# os.startfile(dir+\"LaserFiled.jpeg\")"
+    "os.startfile(dir)"
    ]
   },
   {
@@ -417,6 +438,81 @@
     "plt.ylabel(\"Population\")\n",
     "plt.legend(['$| 1,0 \\\\rangle$','$| 1,1 \\\\rangle$','$| 1,2 \\\\rangle$','$| 1,3 \\\\rangle$','$|1,4 \\\\rangle$','$| 1,5 \\\\rangle$'])\n",
     "plt.savefig(dir+\"popuveq1.jpeg\",dpi=600,bbox_inches=\"tight\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ax1=plt.subplot(1,2,1)\n",
+    "    setlabel(ax1,\"(a)\")\n",
+    "    DataPop =np.loadtxt(s1[ii])\n",
+    "    #plt.style.use('_mpl-gallery-nogrid')\n",
+    "    x=DataPop[:,0]\n",
+    "    y=DataPop[:,1]\n",
+    "    z=DataPop[:,2]\n",
+    "    ny=int((max(y)-min(y))/(y[2]-y[1]))+1\n",
+    "    nx=int((max(x)-min(x))/(x[ny]-x[0]))+1\n",
+    "    zMesh=np.zeros((ny,nx))\n",
+    "    for i in range(1,nx):\n",
+    "        for j in range(1,ny):\n",
+    "            zMesh[j-1,i-1]=z[(i-1)*ny+j-1]\n",
+    "    # print('nx= ',nx,' ny= ',ny)\n",
+    "    # print('xMax= ',max(x),' xMin= ',min(x),' yMax= ',max(y),' yMin= ',min(y))\n",
+    "    # print('x[50]',x[50])\n",
+    "    # print(x[0])\n",
+    "    # print(zMesh)\n",
+    "    xMesh=np.linspace(min(x),max(x),nx)\n",
+    "    yMesh=np.linspace(min(y),max(y),ny)\n",
+    "    #xx,yy,zz=np.meshgrid(xMesh,yMesh,zMesh)\n",
+    "    plt.pcolormesh(xMesh,yMesh,zMesh,cmap='jet')\n",
+    "    ax1.xaxis.set_major_locator(MaxNLocator(integer=True))\n",
+    "    ax1.yaxis.set_major_locator(MaxNLocator(integer=True))\n",
+    "    plt.xlim(-0.5,19.5)\n",
+    "    plt.ylim(-0.5,19.5)\n",
+    "    plt.xlabel('$V$')\n",
+    "    plt.ylabel('$J$')\n",
+    "    plt.title(\"Ground state, $t$ = \"+fileList[ii][11:17]+\" fs\",loc='left')\n",
+    "    plt.colorbar(format=cbformat)\n",
+    "    ax2=plt.subplot(1,2,2)\n",
+    "    setlabel(ax2,\"(b)\")\n",
+    "    DataPop =np.loadtxt(s2[ii])\n",
+    "    #plt.style.use('_mpl-gallery-nogrid')\n",
+    "    x=DataPop[:,0]\n",
+    "    y=DataPop[:,1]\n",
+    "    z=DataPop[:,2]\n",
+    "    ny=int((max(y)-min(y))/(y[2]-y[1]))+1\n",
+    "    nx=int((max(x)-min(x))/(x[ny]-x[0]))+1\n",
+    "    zMesh=np.zeros((ny,nx))\n",
+    "    for i in range(1,nx):\n",
+    "        for j in range(1,ny):\n",
+    "            zMesh[j-1,i-1]=z[(i-1)*ny+j-1]\n",
+    "    # print('nx= ',nx,' ny= ',ny)\n",
+    "    # print('xMax= ',max(x),' xMin= ',min(x),' yMax= ',max(y),' yMin= ',min(y))\n",
+    "    # print('x[50]',x[50])\n",
+    "    # print(x[0])\n",
+    "    # print(zMesh)\n",
+    "    xMesh=np.linspace(min(x),max(x),nx)\n",
+    "    yMesh=np.linspace(min(y),max(y),ny)\n",
+    "    #xx,yy,zz=np.meshgrid(xMesh,yMesh,zMesh)\n",
+    "    plt.pcolormesh(xMesh,yMesh,zMesh,cmap='jet')\n",
+    "    ax2.xaxis.set_major_locator(MaxNLocator(integer=True))\n",
+    "    ax2.yaxis.set_major_locator(MaxNLocator(integer=True))\n",
+    "    plt.title(\"Excited state, $t$ = \"+fileList[ii][11:17]+\" fs\",loc='left')\n",
+    "    plt.xlabel('$V$')\n",
+    "    plt.ylabel('$J$')\n",
+    "    plt.xlim(-0.5,19.5)\n",
+    "    plt.ylim(-0.5,19.5)\n",
+    "    plt.colorbar(format=cbformat)\n",
+    "    plt.subplots_adjust(left=0.125,\n",
+    "                        bottom=0.1, \n",
+    "                        right=0.9, \n",
+    "                        top=0.9, \n",
+    "                        wspace=0.25, \n",
+    "                        hspace=0.2)\n",
+    "    plt.savefig(dir+\"p_vgr_vj\\\\\"+fileList[ii][:17]+\".\"+figureType,bbox_inches = 'tight',dpi=figureDPI)"
    ]
   }
  ],
