--- a/Python/Ionplot.ipynb
+++ b/Python/Ionplot.ipynb
@@ -198,7 +198,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "file=dir+'Laserfield.dat'\n",
     "if fee(file): \n",
     "    TimeBegin =(min(np.loadtxt(dir+'Laserfield.dat')[:,0]))\n",
@@ -222,7 +221,7 @@
     "# TimeTurn=-50\n",
     "# turnPoint=0\n",
     "# TimeBegin=-50\n",
-    "# TimeEnd=150\n"
+    "# TimeEnd=150"
    ]
   },
   {
@@ -2172,7 +2171,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.0 (tags/v3.9.0:9cf6752, Oct  5 2020, 15:34:40) [MSC v.1927 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
