--- a/Python/IonPaperPlot.ipynb
+++ b/Python/IonPaperPlot.ipynb
@@ -117,6 +117,11 @@
     "    formatter.set_scientific(True)\n",
     "    formatter.set_powerlimits((0,0))\n",
     "    ax.yaxis.set_major_formatter(formatter)\n",
+    "    \n",
+    "cbformat=ticker.ScalarFormatter(useMathText=True,useOffset=True)\n",
+    "cbformat.set_powerlimits((-0,0))\n",
+    "cbformat.format=\"%.2f\"\n",
+    "\n",
     "levels=100\n",
     "figureDPI=1200\n",
     "figureType=\"jpeg\"\n",
@@ -134,7 +139,7 @@
    "source": [
     "intDir=\"D:\\\\doc\\\\data\\\\ion\\\\molecularData\\\\\"\n",
     "\n",
-    "plt.figure(figsize=(cm2inch(8*2),cm2inch(6.5)))\n",
+    "plt.figure(figsize=(cm2inch(8*2),cm2inch(8)))\n",
     "ax=plt.subplot(1,2,1)\n",
     "data=np.loadtxt(intDir+\"PotentialEnergy.dat\")\n",
     "np.savetxt(dir+\"data\\\\f1(1)PotentialEnergy.dat\",data)\n",
@@ -164,9 +169,15 @@
     "plt.plot(data[:,0],data[:,1],'k-',data[:,0],data[:,2],'r-.',data[:,0],data[:,3],'b--')\n",
     "plt.xlim(1.75,11)\n",
     "plt.legend([\"$\\\\mu_{XX} $\",\"$\\\\mu_{AA} $\",\"$\\\\mu_{XA} $\"],loc=(0.75,0.08))\n",
-    "plt.tight_layout()\n",
+    "# plt.tight_layout()\n",
+    "plt.subplots_adjust(left=0.1,\n",
+    "                    bottom=0.1, \n",
+    "                    right=0.9, \n",
+    "                    top=0.9, \n",
+    "                    wspace=0.3, \n",
+    "                    hspace=0.3)\n",
     "#plt.savefig(dir+\"PotentialEnergyAndDipoleMent.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
-    "plt.savefig(dir+\"picture\\\\f1potDip.\"+figureType,bbox_inches=\"tight\",transparent=True,dpi=figureDPI)\n",
+    "plt.savefig(dir+\"picture\\\\f1potDip.\"+figureType,dpi=figureDPI)#bbox_inches=\"tight\",,transparent=True\n",
     "plt.show()"
    ]
   },
@@ -306,14 +317,14 @@
     "plt.legend([\"pump\",\"probe\"],loc=legengLoc)\n",
     "# plt.tight_layout()\n",
     "#plt.legend([\"P 1\",\"P 2\",\"P 3\"],loc=legengLoc)\n",
-    "plt.subplots_adjust(left=0.05,\n",
-    "                    bottom=0.05, \n",
+    "plt.subplots_adjust(left=0.1,\n",
+    "                    bottom=0.1, \n",
     "                    right=0.95, \n",
     "                    top=0.95, \n",
     "                    wspace=0.3, \n",
     "                    hspace=0.3)\n",
     "\n",
-    "plt.savefig(dir+\"picture\\\\f3TimeFrequencyDistribution.\"+figureType,bbox_inches ='tight',dpi=figureDPI)\n",
+    "plt.savefig(dir+\"picture\\\\f3TimeFrequencyDistribution.\"+figureType,dpi=figureDPI)\n",
     "plt.show()"
    ]
   },
@@ -341,16 +352,14 @@
     "ax1.tick_params(axis='y', labelcolor=color)\n",
     "\n",
     "ax2 = ax1.twinx()  # instantiate a second axes that shares the same x-axis\n",
-    "\n",
     "color = 'tab:blue'\n",
     "ax2.set_xlim([-500,3050])\n",
     "ax2.set_ylim([0.32,0.73])\n",
     "ax2.set_ylabel('$\\\\langle{\\\\rm cos^2} \\\\theta \\\\rangle$', color=color)  # we already handled the x-label with ax1\n",
     "ax2.plot(x2, y2,'--', color=color)\n",
     "ax2.tick_params(axis='y', labelcolor=color)\n",
-    "\n",
     "fig.tight_layout()  # otherwise the right y-label is slightly clipped\n",
-    "plt.savefig(dir+\"picture\\\\f4AliAndPopVSTime.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
+    "plt.savefig(dir+\"picture\\\\f4AliAndPopVSTime.\"+figureType,bbox_inches='tight',dpi=figureDPI)\n",
     "plt.show()"
    ]
   },
@@ -956,7 +965,7 @@
     "data=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\fc3\\\\FCrad.dat')\n",
     "x=data[:,0]\n",
     "y=data[:,1]\n",
-    "z=data[:,2]\n",
+    "z=data[:,3]\n",
     "plt.ylim(min(y),10.0)\n",
     "im=plt.tricontourf(x,y,z,levels,cmap='jet')\n",
     "\n",
@@ -1015,7 +1024,7 @@
     "                    top=0.9, \n",
     "                    wspace=0.3, \n",
     "                    hspace=0.35)\n",
-    "plt.savefig(dir+'picture\\\\f9ExcRadWave.'+figureType,bbox_inches = 'tight',dpi=figureDPI)"
+    "plt.savefig(dir+'picture\\\\f9niceExcRadWave.'+figureType,bbox_inches = 'tight',dpi=figureDPI)"
    ]
   },
   {
@@ -1024,22 +1033,173 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(cm2inch(8*2),cm2inch(6.5)))\n",
-    "plt.subplot(1,2,1)\n",
-    "data=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\fc3\\\\FCang.dat')\n",
+    "fig = plt.figure(tight_layout=True,figsize=(cm2inch(8*2),cm2inch(6.5*2)))\n",
+    "intDir=\"D:\\\\doc\\\\data\\\\onepump\\\\onepump200\\\\\"\n",
+    "subdir='D:\\\\doc\\\\data\\\\ion1test\\\\tpp\\\\data\\\\'\n",
+    "\n",
+    "\n",
+    "ax=plt.axes([0.10,0.55,0.35,0.35])\n",
+    "setlabelm(ax,'(a)',[-0.2,1.02])\n",
+    "data=np.loadtxt(intDir+\"excradwave.dat\")\n",
+    "np.savetxt(dir+\"data\\\\f9(1).dat\",data,fmt=\"%.9f\")\n",
     "x=data[:,0]\n",
     "y=data[:,1]\n",
     "z=data[:,2]\n",
+    "plt.xlabel(\"Time (fs)\")\n",
+    "plt.ylabel(\"$R$ (a.u.)\")\n",
     "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "# im=ax.tricontourf(x,y,z,levels,cmap='jet')#,vmin=0.0,vmax=2.0)1\n",
+    "# cb=plt.colorbar(im,location='top',fraction=0.15,shrink=0.66,aspect=10,format=\"%.3f\")\n",
     "plt.colorbar(format=cbformat)\n",
-    "plt.subplot(1,2,2)\n",
+    "tick_locator=ticker.MaxNLocator(nbins=5)\n",
+    "cb.locator = tick_locator\n",
+    "cb.update_ticks()\n",
+    "# plt.xlim(0,150)\n",
+    "plt.ylim(min(y),10)\n",
+    "#FC \n",
+    "ax=plt.axes([0.55,0.55,0.35,0.35])\n",
+    "setlabelm(ax,'(b)',[-0.2,1.02])\n",
+    "data=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\fc3\\\\FCrad.dat')\n",
+    "\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z=data[:,3]\n",
+    "t=np.ndarray(shape=(int(len(x)/128),1))\n",
+    "p=np.ndarray(shape=(int(len(x)/128),1))\n",
+    "t[:]=0\n",
+    "p[:]=0\n",
+    "for i in range(0,int(len(x)/128)):\n",
+    "    t[i]=x[i*128+1]\n",
+    "    for j in range(0,128):\n",
+    "        p[i]=p[i]+z[i*128+j]\n",
+    "ax=plt.gca()\n",
+    "plt.plot(t,p)    \n",
+    "plt.ylim(-5e-9,max(p)*2)   \n",
+    "sciforyax(ax)\n",
+    "# cb=plt.colorbar(im,location='top',fraction=0.15,shrink=0.66,aspect=10,format=cbformat)\n",
+    "tick_locator = ticker.MaxNLocator(nbins=5)\n",
+    "cb.locator   = tick_locator\n",
+    "cb.update_ticks()\n",
+    "plt.xlabel('Time (fs)')\n",
+    "plt.ylabel('Intensity (arb.units)')\n",
+    "\n",
+    "\n",
+    "ax=plt.axes([0.1,0.1,0.35,0.35])\n",
+    "setlabelm(ax,'(c)',[-0.2,1.02])\n",
+    "data =np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\onepump2\\\\Excangwave.dat')\n",
+    "#plt.style.use('_mpl-gallery-nogrid')\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]/180\n",
+    "z=data[:,2]\n",
+    "# plt.xlim(TimeTurn+1,TimeEnd)\n",
+    "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "# im=ax.tricontourf(x,y,z,levels,cmap='jet')#,vmin=0.0,vmax=2.0)\n",
+    "# cb=plt.colorbar(im,location='top',fraction=0.15,shrink=0.66,aspect=10,format=cbformat)\n",
+    "plt.colorbar(format=cbformat)\n",
+    "tick_locator=ticker.MaxNLocator(nbins=5)\n",
+    "cb.locator = tick_locator\n",
+    "cb.update_ticks()\n",
+    "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
+    "plt.ylabel(\"$\\\\theta$ ($\\\\pi$)\")\n",
+    "\n",
+    "ax=plt.axes([0.55,0.10,0.35,0.35])\n",
+    "setlabelm(ax,'(d)',[-0.2,1.02])\n",
+    "data=np.loadtxt(\"D:\\\\doc\\\\data\\\\onepump\\\\onePump5\\\\ori_ali_2.dat\")\n",
+    "datapop=np.loadtxt(\"D:\\\\doc\\\\data\\\\onepump\\\\onePump5\\\\PopulationOfState.dat\")\n",
+    "\n",
+    "yp=datapop[:,2]\n",
+    "x=data[:,0]\n",
+    "l=int(len(x)/200*25)\n",
+    "y1=data[:,1]\n",
+    "y2=data[:,2]\n",
+    "x2=x[l:]\n",
+    "y22=data[l:,2]/datapop[l:,2]\n",
+    "ax=plt.gca()\n",
+    "plt.plot(x,y2,'k-',x2,y22,'r--')\n",
+    "plt.legend([\"$\\\\langle \\\\psi_{\\\\rm{exc}}| \\\\rm{cos}^2 \\\\it{\\\\theta}|\\\\psi_{\\\\rm{exc}} \\\\rangle $\",\"$\\\\langle \\\\psi_{\\\\rm{exc}}| \\\\rm{cos}^2 \\\\it{\\\\theta}|\\\\psi_{\\\\rm{exc}} \\\\rangle\\\\cdot \\\\frac{1}{P_{exc}}}$\"],\n",
+    "           fontsize=7,loc=[0.25,0.1])\n",
+    "import matplotlib.ticker as mtick\n",
+    "ax.yaxis.set_major_formatter(mtick.FormatStrFormatter(\"%.2f\"))\n",
+    "plt.ylabel('$\\\\langle {\\\\rm cos^2} \\\\theta \\\\rangle$')\n",
+    "plt.xlabel('Time ('+timeUnit+')')\n",
+    "\n",
+    "\n",
+    "# plt.subplots_adjust(left=0.1,\n",
+    "#                     bottom=0.1, \n",
+    "#                     right=0.9, \n",
+    "#                     top=0.9, \n",
+    "#                     wspace=0.3, \n",
+    "#                     hspace=0.3)\n",
+    "plt.savefig(dir+'picture\\\\f92ExcRadWave.'+figureType,dpi=figureDPI)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "plt.figure(figsize=(8,6))\n",
+    "data=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\fc3\\\\FCrad.dat')\n",
+    "\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z=data[:,3]\n",
+    "t=np.ndarray(shape=(int(len(x)/128),1))\n",
+    "p=np.ndarray(shape=(int(len(x)/128),1))\n",
+    "t[:]=0\n",
+    "p[:]=0\n",
+    "for i in range(0,int(len(x)/128)):\n",
+    "    t[i]=x[i*128+1]\n",
+    "    for j in range(0,128):\n",
+    "        p[i]=p[i]+z[i*128+j]\n",
+    "ax=plt.gca()\n",
+    "plt.plot(t,p)    \n",
+    "plt.ylim(-5e-9,max(p)*2)   \n",
+    "sciforyax(ax)\n",
+    "# cb=plt.colorbar(im,location='top',fraction=0.15,shrink=0.66,aspect=10,format=cbformat)\n",
+    "tick_locator = ticker.MaxNLocator(nbins=5)\n",
+    "cb.locator   = tick_locator\n",
+    "cb.update_ticks()\n",
+    "plt.xlabel('Time (fs)')\n",
+    "plt.ylabel('Intensity (arb.units)')\n",
+    "plt.savefig(dir+'FCradtime.'+figureType,bbox_inches = 'tight',dpi=figureDPI)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "plt.figure(figsize=(8,6))\n",
+    "# plt.subplot(1,2,1)\n",
+    "# data=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\fc3\\\\FCang.dat')\n",
+    "# x=data[:,0]\n",
+    "# y=data[:,1]\n",
+    "# z=data[:,2]\n",
+    "# plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "# plt.colorbar(format=cbformat)\n",
+    "# plt.subplot(1,2,2)\n",
     "data=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\fc3\\\\FCrad.dat')\n",
     "x=data[:,0]\n",
     "y=data[:,1]\n",
-    "z=data[:,2]\n",
+    "z=data[:,3]\n",
     "plt.ylim(min(y),10.0)\n",
     "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
-    "plt.colorbar(format=cbformat)"
+    "plt.colorbar(format=cbformat)\n",
+    "plt.xlabel(\"Time (fs)\")\n",
+    "plt.ylabel(\"$R$ (a.u.)\") \n",
+    "plt.savefig(dir+'FC3.'+figureType, bbox_inches = 'tight',dpi=figureDPI)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fig. The transition intensity between $\\psi_{\\rm{exc}}(R,t)$ and ${\\psi_{\\rm{ion}}}(R)$ versus time $\\langle \\psi_{\\rm{exc}}(R,t)|\\mu_{AI}|\\psi_{\\rm{ion}}(R)\\rangle$."
    ]
   },
   {
@@ -1048,6 +1208,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "fig = plt.figure(tight_layout=True,figsize=(cm2inch(8*2),cm2inch(6.5*2)))\n",
     "intDir=\"D:\\\\doc\\\\data\\\\onepump\\\\onepump200\\\\\"\n",
     "\n",
@@ -1525,7 +1686,7 @@
     "plt.subplot(2,2,4)\n",
     "data1=np.loadtxt(subdir+'84\\\\excRadWave.dat')\n",
     "data2=np.loadtxt(subdir+'84\\\\ionRadWave.dat')\n",
-    "x=data1[:,0]*1000\n",
+    "x=data1[:,0]\n",
     "y=data1[:,1]\n",
     "z=data2[:,2]\n",
     "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
@@ -1966,7 +2127,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.0 (tags/v3.9.0:9cf6752, Oct  5 2020, 15:34:40) [MSC v.1927 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
