--- a/Python/Ionplot.ipynb
+++ b/Python/Ionplot.ipynb
@@ -148,12 +148,13 @@
     "def fee(d):\n",
     "    import os\n",
     "    if (os.path.exists(d)):\n",
-    "        print(\"The file exists. \")\n",
+    "        # print(\"The file exists. \")\n",
     "        sz= os.path.getsize(d)\n",
     "        if not sz:\n",
     "            print(d,\" is empty!\")\n",
+    "            return False\n",
     "        else: \n",
-    "            print(\"Size of \",d,\" is \", sz )\n",
+    "            print(\"Size of \",d,\" is \", sz/1024,'KB' )\n",
     "            return True\n",
     "    else:\n",
     "        print(d, \" is not exists! \")\n",
@@ -172,11 +173,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir='D:\\\\doc\\\\data\\\\2060\\\\'\n",
-    "# \n",
-    "dir='D:\\\\doc\\\\data\\\\ion1test\\\\onepump2\\\\'\n",
-    "dir='D:\\\\doc\\\\data\\\\onepump\\\\onePump5\\\\'\n",
-    "dir='D:\\\\dataofpro\\\\'\n",
+    "dir='D:\\\\doc\\\\data\\\\ion1test\\\\fc1\\\\'\n",
     "print('Working directory',dir)\n",
     "print(\"\\n\")\n",
     "if fee(dir+\"alog.dat\"):\n",
@@ -1766,6 +1763,7 @@
    "outputs": [],
    "source": [
     "plt.figure(figsize=(8/2.54,13/2.54))\n",
+    "dir='D:\\\\doc\\\\data\\\\ion1test\\\\fc10\\\\'\n",
     "data=np.loadtxt(dir+\"FCrad.dat\")\n",
     "x=data[:,0]\n",
     "y=data[:,1]\n",
@@ -2171,7 +2169,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0 (tags/v3.9.0:9cf6752, Oct  5 2020, 15:34:40) [MSC v.1927 64 bit (AMD64)]"
+   "version": "3.9.0"
   },
   "orig_nbformat": 4,
   "vscode": {
