--- a/Python/IonPaperPlot.ipynb
+++ b/Python/IonPaperPlot.ipynb
@@ -319,11 +319,10 @@
     "#plt.legend([\"P 1\",\"P 2\",\"P 3\"],loc=legengLoc)\n",
     "plt.subplots_adjust(left=0.1,\n",
     "                    bottom=0.1, \n",
-    "                    right=0.95, \n",
-    "                    top=0.95, \n",
+    "                    right=0.9, \n",
+    "                    top=0.9, \n",
     "                    wspace=0.3, \n",
     "                    hspace=0.3)\n",
-    "\n",
     "plt.savefig(dir+\"picture\\\\f3TimeFrequencyDistribution.\"+figureType,dpi=figureDPI)\n",
     "plt.show()"
    ]
@@ -942,7 +941,7 @@
     "\n",
     "\n",
     "ax=plt.axes([0.10,0.55,0.35,0.35])\n",
-    "setlabelm(ax,'(a)',[-0.2,1.1])\n",
+    "setlabelm(ax,'(a)',[-0.2,1.02])\n",
     "data=np.loadtxt(intDir+\"excradwave.dat\")\n",
     "np.savetxt(dir+\"data\\\\f9(1).dat\",data,fmt=\"%.9f\")\n",
     "x=data[:,0]\n",
@@ -961,7 +960,7 @@
     "plt.ylim(min(y),10)\n",
     "#FC \n",
     "ax=plt.axes([0.55,0.55,0.35,0.35])\n",
-    "setlabelm(ax,'(b)',[-0.2,1.1])\n",
+    "setlabelm(ax,'(b)',[-0.2,1.02])\n",
     "data=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\fc3\\\\FCrad.dat')\n",
     "x=data[:,0]\n",
     "y=data[:,1]\n",
@@ -979,7 +978,7 @@
     "\n",
     "\n",
     "ax=plt.axes([0.1,0.1,0.35,0.35])\n",
-    "setlabelm(ax,'(c)',[-0.2,1.1])\n",
+    "setlabelm(ax,'(c)',[-0.2,1.02])\n",
     "data =np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\onepump2\\\\Excangwave.dat')\n",
     "#plt.style.use('_mpl-gallery-nogrid')\n",
     "x=data[:,0]\n",
@@ -997,7 +996,7 @@
     "plt.ylabel(\"$\\\\theta$ ($\\\\pi$)\")\n",
     "\n",
     "ax=plt.axes([0.55,0.10,0.28,0.35])\n",
-    "setlabelm(ax,'(d)',[-0.2,1.1])\n",
+    "setlabelm(ax,'(d)',[-0.2,1.02])\n",
     "data=np.loadtxt(\"D:\\\\doc\\\\data\\\\onepump\\\\onePump5\\\\ori_ali_2.dat\")\n",
     "datapop=np.loadtxt(\"D:\\\\doc\\\\data\\\\onepump\\\\onePump5\\\\PopulationOfState.dat\")\n",
     "\n",
@@ -2127,7 +2126,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0 (tags/v3.9.0:9cf6752, Oct  5 2020, 15:34:40) [MSC v.1927 64 bit (AMD64)]"
+   "version": "3.9.0"
   },
   "orig_nbformat": 4,
   "vscode": {
