--- a/Python/Ionplot.ipynb
+++ b/Python/Ionplot.ipynb
@@ -173,7 +173,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir='D:\\\\doc\\\\data\\\\ion1test\\\\fc1\\\\'\n",
+    "dir='D:\\\\doc\\\\data\\\\ion1test\\\\fc8\\\\'\n",
     "print('Working directory',dir)\n",
     "print(\"\\n\")\n",
     "if fee(dir+\"alog.dat\"):\n",
@@ -739,6 +739,118 @@
     "# cb = fig.colorbar(sp4, cax=p)\n",
     "plt.savefig(dir+\"WaveRadDis.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plt.figure(tight_layout=True,figsize=(cm2inch(8*2),cm2inch(6.5*2)))\n",
+    "intDir='D:\\\\doc\\\\data\\\\ion1test\\\\fc7\\\\'\n",
+    "ax=plt.axes([0.10,0.55,0.35,0.35])\n",
+    "setlabelm(ax,'(a)',[-0.2,1.02])\n",
+    "data=np.loadtxt(intDir+\"excradwave.dat\")\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z=data[:,2]\n",
+    "plt.xlabel(\"Time (fs)\")\n",
+    "plt.ylabel(\"$R$ (a.u.)\")\n",
+    "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "# im=ax.tricontourf(x,y,z,levels,cmap='jet')#,vmin=0.0,vmax=2.0)1\n",
+    "# cb=plt.colorbar(im,location='top',fraction=0.15,shrink=0.66,aspect=10,format=\"%.3f\")\n",
+    "plt.colorbar(format=cbformat)\n",
+    "# plt.xlim(0,150)\n",
+    "plt.ylim(min(y),10)\n",
+    "#FC \n",
+    "\n",
+    "\n",
+    "\n",
+    "ax=plt.axes([0.55,0.55,0.35,0.17])\n",
+    "\n",
+    "data=np.loadtxt(intDir+\"FcRad.dat\")\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z1=data[:,2]\n",
+    "z2=data[:,3]\n",
+    "t=np.ndarray(shape=(int(len(x)/128),1))\n",
+    "p=np.ndarray(shape=(int(len(x)/128),1))\n",
+    "t[:]=0\n",
+    "p[:]=0\n",
+    "for i in range(0,int(len(x)/128)):\n",
+    "    t[i]=x[i*128+1]\n",
+    "    for j in range(0,128):\n",
+    "        p[i]=p[i]+z2[i*128+j]\n",
+    "# ax=plt.gca()\n",
+    "\n",
+    "ax.plot(t,p)    \n",
+    "\n",
+    "plt.ylim(-1e-9,max(p)*1.5)  \n",
+    "sciforyax(ax)\n",
+    "plt.yticks(rotation=45)\n",
+    "# cb=plt.colorbar(im,location='top',fraction=0.15,shrink=0.66,aspect=10,format=cbformat)\n",
+    "plt.xlabel('Time (fs)')\n",
+    "plt.ylabel('Intensity (arb.units)')\n",
+    "plt.yticks([0e-9,2e-9])\n",
+    "ax=plt.axes([0.55,0.73,0.35,0.172])\n",
+    "setlabelm(ax,'(b)',[-0.2,1.02])\n",
+    "plt.tricontourf(x,y,z2,100,cmap='jet') \n",
+    "plt.ylabel('$R$ (a.u.)')\n",
+    "plt.ylim(min(y),10.0)\n",
+    "plt.yticks(rotation=-45)\n",
+    "plt.yticks([3,5,7,9])\n",
+    "ax.axes.xaxis.set_visible(False)\n",
+    "\n",
+    "# ax.yaxis.set_major_formatter(mtick.FormatStrFormatter(\"%.2f\"))\n",
+    "\n",
+    "\n",
+    "ax=plt.axes([0.1,0.1,0.35,0.35])\n",
+    "setlabelm(ax,'(c)',[-0.2,1.02])\n",
+    "data =np.loadtxt(intDir+'Excangwave.dat')\n",
+    "#plt.style.use('_mpl-gallery-nogrid')\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]/180\n",
+    "z=data[:,2]\n",
+    "# plt.xlim(TimeTurn+1,TimeEnd)\n",
+    "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "# im=ax.tricontourf(x,y,z,levels,cmap='jet')#,vmin=0.0,vmax=2.0)\n",
+    "# cb=plt.colorbar(im,location='top',fraction=0.15,shrink=0.66,aspect=10,format=cbformat)\n",
+    "plt.colorbar(format=cbformat)\n",
+    "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
+    "plt.ylabel(\"$\\\\theta$ ($\\\\pi$)\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "ax=plt.axes([0.55,0.10,0.35,0.35])\n",
+    "setlabelm(ax,'(d)',[-0.2,1.02])\n",
+    "data=np.loadtxt(intDir+\"ori_ali_2.dat\")\n",
+    "datapop=np.loadtxt(intDir+\"PopulationOfState.dat\")\n",
+    "\n",
+    "yp=datapop[:,2]\n",
+    "x=data[:,0]\n",
+    "l=int(len(x)/200*25)\n",
+    "y1=data[:,1]\n",
+    "y2=data[:,2]\n",
+    "x2=x[l:]\n",
+    "y22=data[l:,2]/datapop[l:,2]\n",
+    "ax=plt.gca()\n",
+    "plt.plot(x,y2,'k-',x2,y22,'r--')\n",
+    "plt.legend([\"$\\\\langle \\\\psi_{\\\\rm{exc}}| \\\\rm{cos}^2 \\\\it{\\\\theta}|\\\\psi_{\\\\rm{exc}} \\\\rangle $\",\"$\\\\langle \\\\psi_{\\\\rm{exc}}| \\\\rm{cos}^2 \\\\it{\\\\theta}|\\\\psi_{\\\\rm{exc}} \\\\rangle\\\\cdot \\\\frac{1}{P_{exc}}}$\"],\n",
+    "           fontsize=7,loc=[0.25,0.1])\n",
+    "import matplotlib.ticker as mtick\n",
+    "# ax.yaxis.set_major_formatter(mtick.FormatStrFormatter(\"%.0f\"))\n",
+    "plt.ylabel('$\\\\langle {\\\\rm cos^2} \\\\theta \\\\rangle$')\n",
+    "plt.xlabel('Time ('+timeUnit+')')\n",
+    "# plt.ylim(0,1)\n",
+    "\n",
+    "# plt.subplots_adjust(left=0.1,\n",
+    "#                     bottom=0.1, \n",
+    "#                     right=0.9, \n",
+    "#                     top=0.9, \n",
+    "#                     wspace=0.3, \n",
+    "#                     hspace=0.3)\n",
+    "plt.savefig(dir+'ExcRadWave.'+figureType,dpi=figureDPI)"
    ]
   },
   {
@@ -1763,7 +1875,7 @@
    "outputs": [],
    "source": [
     "plt.figure(figsize=(8/2.54,13/2.54))\n",
-    "dir='D:\\\\doc\\\\data\\\\ion1test\\\\fc10\\\\'\n",
+    "dir='D:\\\\doc\\\\data\\\\ion1test\\\\fc9\\\\'\n",
     "data=np.loadtxt(dir+\"FCrad.dat\")\n",
     "x=data[:,0]\n",
     "y=data[:,1]\n",
